# deepin-image-viewer

./: .gitignore  .packit.yaml  .project  .project.json  CHANGELOG.md  CMakeLists.txt  HACKING.md  README.md  README.zh_CN.md  application.cpp  clog.toml  config.h.in  deepin-image-viewer.desktop  deepin-image-viewer.pro  deepin-image-viewer.txt  deepin-viewer.pro  deploy_dep  install_dep  linglong.yaml  main.cpp  mainwidget.cpp  resources.qrc  signalmanager.h  update_ts.sh
libUnionImage/: CMakeLists.txt
libUnionImage/ImageDemo/: ImageDemo.pro  imagedemothread.cpp  imagedemothread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moviegraphicsitem.cpp  moviegraphicsitem.h
libUnionImage/UnionImage/: UnionImage.pro  unionimage.cpp  unionimage.h
libimage-viewer/: CMakeLists.txt  image-viewer_global.h  imageengine.cpp  imageengine.h  imageviewer.cpp  imageviewer.h  libimage-viewer.pc.in  libimage-viewer.pro
libimage-viewer/accessibility/: acobjectlist.h
libimage-viewer/icons/: icons.qrc  theme-icons.qrc
libimage-viewer/modules/: viewpanel.cpp  viewpanel.h
libimage-viewer/service/: commonservice.cpp  commonservice.h  configsetter.cpp  configsetter.h  imagedataservice.cpp  imagedataservice.h  service.pri
libimage-viewer/slideshow/: imageanimation.cpp  slideshow.pri  slideshowpanel.cpp  slideshowpanel.h
libimage-viewer/translations/: libimage-viewer.ts  libimage-viewer_am_ET.ts  libimage-viewer_ar.ts  libimage-viewer_ast.ts  libimage-viewer_bg.ts  libimage-viewer_bo.ts  libimage-viewer_ca.ts  libimage-viewer_cs.ts  libimage-viewer_da.ts  libimage-viewer_de.ts  libimage-viewer_el.ts  libimage-viewer_es.ts  libimage-viewer_et.ts  libimage-viewer_fa.ts  libimage-viewer_fi.ts  libimage-viewer_fr.ts  libimage-viewer_gl_ES.ts  libimage-viewer_he.ts  libimage-viewer_hr.ts  libimage-viewer_hu.ts  libimage-viewer_id.ts  libimage-viewer_it.ts  libimage-viewer_ko.ts  libimage-viewer_lt.ts  libimage-viewer_ms.ts  libimage-viewer_ne.ts  libimage-viewer_nl.ts  libimage-viewer_pl.ts  libimage-viewer_pt.ts  libimage-viewer_pt_BR.ts  libimage-viewer_ru.ts  libimage-viewer_sk.ts  libimage-viewer_sl.ts  libimage-viewer_sq.ts  libimage-viewer_sr.ts  libimage-viewer_sv.ts  libimage-viewer_tr.ts  libimage-viewer_ug.ts  libimage-viewer_uk.ts  libimage-viewer_zh_CN.ts  (+2 more)
libimage-viewer/unionimage/: baseutils.cpp  baseutils.h  imageutils.cpp  imageutils.h  imageutils_libexif.h  imgoperate.cpp  imgoperate.h  pluginbaseutils.cpp  pluginbaseutils.h  snifferimageformat.cpp  snifferimageformat.h  unionimage.cpp  unionimage.h  unionimage.pri
libimage-viewer/viewpanel/: lockwidget.cpp  lockwidget.h  navigationwidget.cpp  navigationwidget.h  thumbnailwidget.cpp  thumbnailwidget.h  viewpanel.cpp  viewpanel.h  viewpanel.pri
libimage-viewer/widgets/: abstracttoptoolbar.cpp  abstracttoptoolbar.h  extensionpanel.cpp  extensionpanel.h  formlabel.h  imagebutton.cpp  imagebutton.h  printhelper.cpp  printhelper.h  renamedialog.cpp  renamedialog.h  themewidget.cpp  themewidget.h  toast.cpp  toptoolbar.cpp  toptoolbar.h  widgets.pri
qimage-plugins/libraw/: CMakeLists.txt  datastream.cpp  datastream.h  libraw.pro  main.cpp  raw.desktop  raw.json  rawiohandler.cpp  rawiohandler.h
src/: CMakeLists.txt  com.deepin.imageViewer.service  deepin-image-viewer.desktop  deepin-image-viewer.qrc  launcherplugin.cpp  launcherplugin.h  main.cpp  res.qrc  src.pro
src/qml/: AlertToolTip.qml  FloatingNotice.qml  FullImageView.qml  FullThumbnail.qml  GlobalVar.qml  ImageAnimation.qml  ImageView.qml  ImageViewer.qml  InfomationDialog.qml  ListViewDelegate.qml  LiveBlock.qml  LiveBlockController.js  LiveBlockRubberBand.qml  LiveTextWidget.qml  MainStack.qml  MultiImageListView.qml  NavigationWidget.qml  OpenImageWidget.qml  PropertyActionItemDelegate.qml  PropertyItem.qml  PropertyItemDelegate.qml  ReName.qml  RightMenuItem.qml  SFadeInOut.qml  SliderShow.qml  ThumbnailButton.qml  ThumbnailListView.qml  ViewRightMenu.qml  ViewTopTitle.qml  main.qml
src/src/: application.cpp  application.h  commandparser.cpp  commandparser.h  configsetter.cpp  configsetter.h  cursortool.cpp  cursortool.h  filecontrol.cpp  filecontrol.h  globalcontrol.cpp  globalcontrol.h  globalstatus.cpp  globalstatus.h  main.cpp  thumbnailload.cpp  thumbnailload.h  types.cpp  types.h
src/translations/: deepin-image-viewer.ts  deepin-image-viewer_ady.ts  deepin-image-viewer_af.ts  deepin-image-viewer_af.ts.backup  deepin-image-viewer_am_ET.ts  deepin-image-viewer_ar.ts  deepin-image-viewer_ast.ts  deepin-image-viewer_az.ts  deepin-image-viewer_bg.ts  deepin-image-viewer_bn.ts  deepin-image-viewer_bo.ts  deepin-image-viewer_bo.ts.backup  deepin-image-viewer_bqi.ts  deepin-image-viewer_br.ts  deepin-image-viewer_ca.ts  deepin-image-viewer_cs.ts  deepin-image-viewer_da.ts  deepin-image-viewer_de.ts  deepin-image-viewer_el.ts  deepin-image-viewer_en_AU.ts  deepin-image-viewer_eo.ts  deepin-image-viewer_es.ts  deepin-image-viewer_et.ts  deepin-image-viewer_eu.ts  deepin-image-viewer_eu.ts.backup  deepin-image-viewer_fa.ts  deepin-image-viewer_fi.ts  deepin-image-viewer_fil.ts  deepin-image-viewer_fr.ts  deepin-image-viewer_gl_ES.ts  deepin-image-viewer_he.ts  deepin-image-viewer_hi_IN.ts  deepin-image-viewer_hr.ts  deepin-image-viewer_hu.ts  deepin-image-viewer_hy.ts  deepin-image-viewer_id.ts  deepin-image-viewer_it.ts  deepin-image-viewer_ja.ts  deepin-image-viewer_ka.ts  deepin-image-viewer_km_KH.ts  (+45 more)
src/viewer/: application.h  (+2 more)
tests/: CMakeLists.txt  gtestview.cpp  gtestview.h  main.cpp  test-prj-running.sh  test_dirwatcher.cpp  test_f_controller.cpp  test_frame.cpp  test_module_slideshow.cpp  test_module_view_contents.cpp  test_module_view_scen.cpp  test_module_view_z.cpp  test_service.cpp  test_utils.cpp  test_viewer.cpp  test_widget.cpp  test_z_defult.cpp  test_z_exit.cpp  testapi.h
viewer/: CMakeLists.txt  application.cpp  application.h  com.deepin.DeepinImageViewer.service  com.deepin.deepinimageviewer.service  config.h.in  deepin-image-viewer.desktop  main.cpp  resources.qrc  theme-icons.qrc  translate_desktop2ts.sh  update_ts.sh  viewer.pro
(+1276 files in other folders)
